feat: UX perfect polish - Ython supprimé + Logo welcome + Scroll optimisé 🎯
✅ YTHON DÉFINITIVEMENT SUPPRIMÉ:
- Julien: 'Lead Python' → 'Lead Developer'
- Modifié dans index.html ET assets/js/main.js
- Plus aucune trace de 'Python' ou 'ython' dans Dynamic Island

🖼️ LOGO SUR WELCOME PAGE:
- Logo visible sur les 3 pages (welcome + landing IT + landing Gov)
- Modifié body.welcome-mode .logo-btn: display none → flex
- Cohérence visuelle parfaite

📝 TEXTE WELCOME RÉORGANISÉ:
- 'Missions courtes...' déplacé SOUS les bulles IT/Gov
- Au lieu d'au-dessus (moins de surcharge visuelle en haut)
- Meilleur équilibre et hiérarchie visuelle

🔍 SEARCH BAR PLACEHOLDER ADAPTATIF:
- Placeholder réduit: clamp(0.75rem, 2vw, 0.9rem)
- Texte complet visible sur tous devices
- 'Comment notre équipe peut vous aider ?' tient sur 1 ligne

📜 SCROLL LANDING OPTIMISÉ:
- 'Notre histoire' apparaît 40% plus vite
- Mobile: margin-top 50vh → 30vh
- iPhone SE: 80px → 40px
- Android: 120px → 60px
- Moins d'espace vide, meilleur flow

Fichiers modifiés:
- index.html (experts + structure welcome)
- assets/js/main.js (experts)
- assets/css/styles-base.css (logo welcome)
- assets/css/styles-mobile.css (placeholder + scroll)

Site 100% polish mobile + desktop 🚀

--- a/index.html
+++ b/index.html
@@ -134,11 +134,6 @@
             <div style="font-family: 'Inter', sans-serif; font-size: 140px; font-weight: 900; color: #f5f5f7; margin-bottom: 20px; letter-spacing: -2px; text-shadow: 0 4px 12px rgba(26, 15, 10, 0.15);">
                 Codentis
             </div>
-            <p class="welcome-text">
-                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin,<br>
-                quand vous en avez besoin.<br>
-                Sur quel domaine souhaitez-vous être accompagné ?
-            </p>
             <div class="welcome-choices">
                 <div class="choice-bubble" onclick="selectSite('it')">
                     <div class="bubble-content">
@@ -177,6 +172,11 @@
                     </div>
                 </div>
             </div>
+            <p class="welcome-text">
+                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin,<br>
+                quand vous en avez besoin.<br>
+                Sur quel domaine souhaitez-vous être accompagné ?
+            </p>
         </div>
     </div>
 
@@ -620,7 +620,7 @@
             { name: 'Quentin', role: 'Expert Cybersécurité' },
             { name: 'Sophie', role: 'Data Scientist' },
             { name: 'Marc', role: 'Architecte Cloud' },
-            { name: 'Julien', role: 'Lead Python' },
+            { name: 'Julien', role: 'Lead Developer' },
             { name: 'Nadia', role: 'DevOps Engineer' },
             { name: 'Alexandre', role: 'Expert IA & Machine Learning' },
             { name: 'Émilie', role: 'Ingénieur Data' },
