fix: 'Sur quel domaine...' remis au-dessus des bulles 🎯
Correction hiérarchie welcome page:
- 'Sur quel domaine souhaitez-vous être accompagné ?' → AU-DESSUS
- Bulles IT/Gov au centre
- 'Missions courtes ou longues...' → EN DESSOUS

Structure finale:
1. Logo Codentis
2. Question 'Sur quel domaine...'
3. Bulles IT/Gov
4. Texte 'Missions courtes...'

Meilleure hiérarchie visuelle ✅

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             <div style="font-family: 'Inter', sans-serif; font-size: 140px; font-weight: 900; color: #f5f5f7; margin-bottom: 20px; letter-spacing: -2px; text-shadow: 0 4px 12px rgba(26, 15, 10, 0.15);">
                 Codentis
             </div>
+            <p class="welcome-text" style="margin-bottom: 30px;">
+                Sur quel domaine souhaitez-vous être accompagné ?
+            </p>
             <div class="welcome-choices">
                 <div class="choice-bubble" onclick="selectSite('it')">
                     <div class="bubble-content">
@@ -172,10 +175,9 @@
                     </div>
                 </div>
             </div>
-            <p class="welcome-text">
+            <p class="welcome-text" style="margin-top: 30px;">
                 Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin,<br>
-                quand vous en avez besoin.<br>
-                Sur quel domaine souhaitez-vous être accompagné ?
+                quand vous en avez besoin.
             </p>
         </div>
     </div>
