feat: Welcome phrases sur 1 ligne avec police adaptative 🎯
✅ LES 2 PHRASES TIENNENT SUR 1 LIGNE:

1️⃣ Phrase du haut (question):
'Sur quel domaine souhaitez-vous être accompagné ?'
- Police: clamp(0.9rem, 1.8vw, 1.2rem)

2️⃣ Phrase du bas (missions):
'Missions courtes ou longues... quand vous en avez besoin.'
- <br> supprimés
- Police: clamp(0.75rem, 1.5vw, 1rem) - plus petite
- Classe .welcome-text-bottom ajoutée

📱 ADAPTATIONS CSS:
- white-space: nowrap (force 1 ligne)
- overflow: hidden + text-overflow: ellipsis (sécurité)
- max-width: 100% (responsive)

✅ Police adaptative selon device:
- iPhone SE: 0.75rem
- Desktop: jusqu'à 1rem (bas) et 1.2rem (haut)
- Fluide entre les deux avec vw

Fichiers modifiés:
- index.html (classe + <br> supprimés)
- styles-base.css (welcome-text + welcome-text-bottom)

--- a/index.html
+++ b/index.html
@@ -175,9 +175,8 @@
                     </div>
                 </div>
             </div>
-            <p class="welcome-text" style="margin-top: 30px;">
-                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin,<br>
-                quand vous en avez besoin.
+            <p class="welcome-text welcome-text-bottom" style="margin-top: 30px;">
+                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin, quand vous en avez besoin.
             </p>
         </div>
     </div>
