fix: Phrase welcome peut aller sur plusieurs lignes - bug bulles corrigé 🎯
❌ REVERT white-space: nowrap qui causait le bug:
- Les bulles IT/Gov étaient élargies
- La phrase ne rentrait pas sur 1 ligne sur mobile

✅ CORRECTIONS:
- Supprimé white-space: nowrap + overflow + ellipsis
- <br> remis dans la phrase du bas
- Police remise à taille normale: clamp(1rem, 2vw, 1.3rem)
- Phrase du bas: clamp(0.9rem, 1.8vw, 1.1rem)
- max-width: 900px (au lieu de 100%)

✅ Résultat:
- Bulles IT/Gov: taille normale ✅
- Phrase du haut: 'Sur quel domaine...' sur 1 ligne ✅
- Phrase du bas: peut aller sur 2 lignes sur mobile (OK) ✅
- Lisibilité restaurée ✅

Fichiers modifiés:
- styles-base.css (welcome-text normal)
- index.html (<br> restauré)

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                 </div>
             </div>
             <p class="welcome-text welcome-text-bottom" style="margin-top: 30px;">
-                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin, quand vous en avez besoin.
+                Missions courtes ou longues, nous apportons l'expertise dont vous avez besoin,<br>
+                quand vous en avez besoin.
             </p>
         </div>
     </div>
