fix: Suppression placeholders entre crochets dans exemples prompts 🔧

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Liwe - Experts IT & Stratégiques</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Styles de base -->
-    <link rel="stylesheet" href="assets/css/styles-base.css?v=5">
+    <link rel="stylesheet" href="assets/css/styles-base.css?v=6">
     <!-- Styles responsives par device -->
-    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=5">
-    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=5">
-    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=5">
+    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=6">
+    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=6">
+    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=6">
 </head>
 <body>
     <!-- Hamburger Menu Button (Mobile only) -->
@@ -2848,7 +2848,9 @@ Dans ta toute première réponse, tu DOIS :
 3. Reformuler brièvement la demande
 4. Poser UNE SEULE question de clarification
 
-Exemple : "Bonjour ! Je suis l'assistant virtuel de Liwe. Mon rôle est de bien comprendre votre besoin à travers 2 questions rapides, puis je transmettrai votre demande à nos experts qui vous répondront sous 24h. Je vois que vous cherchez à [reformulation]. Pour mieux vous aider, [première question] ?"
+Exemple concret : "Bonjour ! Je suis l'assistant virtuel de Liwe. Mon rôle est de bien comprendre votre besoin à travers 2 questions rapides, puis je transmettrai votre demande à nos experts qui vous répondront sous 24h. Je vois que vous cherchez à sécuriser votre infrastructure. Pour mieux vous aider, quelle est la taille de votre équipe IT actuelle ?"
+
+IMPORTANT : Les mots entre crochets comme [reformulation] sont des PLACEHOLDERS que tu dois REMPLACER par du contenu réel. NE JAMAIS afficher les crochets à l'utilisateur.
 
 PHASE 2 : QUALIFICATION (2 QUESTIONS MAX)
 ⚠️ RÈGLE ABSOLUE : Pose UNE SEULE question par message.
@@ -2909,7 +2911,9 @@ Dans ta toute première réponse, tu DOIS :
 3. Reformuler brièvement la demande
 4. Poser UNE SEULE question de clarification
 
-Exemple : "Bonjour ! Je suis l'assistant virtuel de Liwe. Mon rôle est de bien comprendre votre besoin stratégique à travers 2 questions rapides, puis je transmettrai votre demande à nos experts qui vous répondront sous 24h. Je vois que vous cherchez à [reformulation]. Pour mieux vous orienter, [première question] ?"
+Exemple concret : "Bonjour ! Je suis l'assistant virtuel de Liwe. Mon rôle est de bien comprendre votre besoin stratégique à travers 2 questions rapides, puis je transmettrai votre demande à nos experts qui vous répondront sous 24h. Je vois que vous cherchez à structurer votre roadmap produit. Pour mieux vous orienter, combien de produits gérez-vous actuellement ?"
+
+IMPORTANT : Les mots entre crochets comme [reformulation] sont des PLACEHOLDERS que tu dois REMPLACER par du contenu réel. NE JAMAIS afficher les crochets à l'utilisateur.
 
 PHASE 2 : QUALIFICATION (2 QUESTIONS MAX)
 ⚠️ RÈGLE ABSOLUE : Pose UNE SEULE question par message.
