--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 Posez votre question, nos équipes évaluent votre besoin et vous répondent sous 24h
             </p>
             <div class="search-bar">
-                <input type="text" class="search-input" id="questionInput" placeholder="Comment notre équipe peut vous aider ?" onfocus="toggleDropdown('dropdownIT')">            <button class="search-submit-btn" onclick="submitQuestion('questionInput')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
+                <input type="text" class="search-input" id="questionInput" placeholder="Comment notre équipe peut vous aider ?" onfocus="toggleDropdown('dropdownIT')" autocomplete="off">            <button class="search-submit-btn" onclick="submitQuestion('questionInput')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                 <div class="questions-dropdown" id="dropdownIT">
                     <div class="dropdown-title">Exemples de questions :</div>
                     <div class="question-item" onclick="selectQuestion(this, 'dropdownIT')">Comment sécuriser notre infrastructure cloud ?</div>
@@ -372,7 +372,7 @@
                 Posez votre question, nos équipes évaluent votre besoin et vous répondent sous 24h
             </p>
             <div class="search-bar">
-                <input type="text" class="search-input" id="questionInputGov" placeholder="Comment notre équipe peut vous aider ?" onfocus="toggleDropdown('dropdownGov')">
+                <input type="text" class="search-input" id="questionInputGov" placeholder="Comment notre équipe peut vous aider ?" onfocus="toggleDropdown('dropdownGov')" autocomplete="off">
                 <button class="search-submit-btn" onclick="submitQuestion('questionInputGov')"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                 <div class="questions-dropdown" id="dropdownGov">
                     <div class="dropdown-title">Exemples de questions :</div>
@@ -2797,12 +2797,13 @@
             </div>
             <div class="chat-input-area">
                 <div class="chat-input-container">
-                    <input 
-                        type="text" 
-                        class="chat-input" 
-                        id="chatInput" 
+                    <input
+                        type="text"
+                        class="chat-input"
+                        id="chatInput"
                         placeholder="Tapez votre message..."
                         onkeypress="if(event.key === 'Enter') sendChatMessage()"
+                        autocomplete="off"
                     >
                     <button class="chat-send-btn" id="chatSendBtn" onclick="sendChatMessage()"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                 </div>
